--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                       <figcaption>
                                           <a href="assets/freezingcell.jpg">
                             
-                                LP flow cell
+                                              Freezing cell (-20 Degrees)
                             
                         </a>
                                       </figcaption>
