--- a/index.html
+++ b/index.html
@@ -282,6 +282,20 @@
                 </div>
             </div>
         </div>
+        <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+            <div class="ows-image-container">
+                <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+                    <img data-view-type="live" data-id="1612" src="assets/compression.gif" alt="Compression">
+                </div>
+            </div>
+        </div>
+        <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+            <div class="ows-image-container">
+                <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+                    <img data-view-type="live" data-id="1612" src="assets/compression.gif" alt="Compression">
+                </div>
+            </div>
+        </div>
     </div>
   </div>
   <div class="slide" data-level="3">
