--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
         <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
             <div class="ows-image-container">
                 <div class="ows-image-container-wrapper" data-image-type="decorative_image">
-                    <img data-view-type="live" data-id="1612" src="assets/compression.gif" alt="Compression">
+                    <img data-view-type="live" data-id="1613" src="assets/compressionhor.gif" alt="Compression HOR">
                 </div>
             </div>
         </div>
         <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
             <div class="ows-image-container">
                 <div class="ows-image-container-wrapper" data-image-type="decorative_image">
-                    <img data-view-type="live" data-id="1612" src="assets/compression.gif" alt="Compression">
+                    <img data-view-type="live" data-id="1614" src="assets/compressionlong.gif" alt="Compression Long">
                 </div>
             </div>
         </div>
