--- a/index.html
+++ b/index.html
@@ -340,6 +340,13 @@
   <div class="slide" data-level="1">
       <section data-view-type="live">
           <h2 data-view-type="live">Introduction</h2>
+          <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+            <div class="ows-image-container">
+                <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+                    <img data-view-type="live" data-id="1615" src="assets/multi_scale.png" alt="Multi Scale">
+                </div>
+            </div>
+        </div>
       </section>
   </div>
   <div class="slide" data-level="2">
