--- a/index.html
+++ b/index.html
@@ -380,6 +380,13 @@
           <p data-view-type="live">Microscopy: allows looking at objects not visible for the naked eye.</p>
           <p data-view-type="live">Limitation: the smallest distinguishable features are determined by the wavelength of visual light (0.4 - 0.7 &mu;m)</p>
           <p data-view-type="course">Microscopy has always been an intriguing area of science, since it allows looking at objects in a way which is beyond the possibilities of the naked eye. From the end of the 16th century, optical lenses were used to magnify objects more than a hundredfold, which opened a whole new world to scientists of all fields. Although modern optical microscopes make it possible to look at matter at the microscopic scale, there is also a limit. The smallest distinguishable features are determined by the wavelength of visual light (&plusmn;0.4 - 0.7 &mu;m), due to the fact that even a microscope with perfect lenses is subjected to diffractive effects. However, by changing the source of illumination to a radiation probe with a smaller wavelength, smaller details can be observed.</p>
+          <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+            <div class="ows-image-container">
+                <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+                    <img data-view-type="live" data-id="1616" src="assets/light.jpg" alt="Visible light">
+                </div>
+            </div>
+        </div>
       </section>
   </div>
   <div class="slide" data-level="3">
