--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
               </div>
           </div>
           <p data-view-type="live">Smaller wavelength than visible light =&gt; smaller details can be observed</p>
+          <p data-view-type="live">By changing the source of illumination to a radiation probe with a smaller wavelength, smaller details can be observed.</p>
       </section>
   </div>
   <div class="slide" data-level="3">
