--- a/index.html
+++ b/index.html
@@ -553,6 +553,18 @@
       </div>
     </div>
   </div>
+  <div class="slide" data-level="4">
+    <p data-view-type="live">Examples of x-ray usage in daily life </p>        
+    <div class="ows-image-container">
+      <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+          <div class="ows-image-container">
+            <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+              <img data-view-type="live" data-id="1618" src="assets/CT_auto" alt="x-ray scan of a car">
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
   <div class="slide" data-level="2">
     <p data-view-type="live">Fast development in characterization techniques, digital revolution</p>
     <p data-view-type="live">=&gt; massive amounts of digital data</p>
