--- a/index.html
+++ b/index.html
@@ -669,10 +669,19 @@
     </section>
   </div>
   <div class="slide" data-level="3">
-    <section data-view-type="live">
-        <h2 data-view-type="live">Pixels</h2>
-    </section>
-  </div>
+      <section data-view-type="live">
+          <h2 data-view-type="live">Can anybody explain what a pixel is?</h2>
+          <div class="ows-image-container">
+              <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
+                  <div class="ows-image-container">
+                    <div class="ows-image-container-wrapper" data-image-type="decorative_image">
+                      <img data-view-type="live" src="https://media.giphy.com/media/xTiN0IuPQxRqzxodZm/giphy.gif" alt="">
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+    </div>
   <div class="slide" data-level="4">
     <p data-view-type="live">In digital imaging, a pixel, or picture element is a physical point in a raster image, or the smallest addressable element in an all points addressable display device, so it is the smallest controllable element of a picture represented on the screen.</p>
     <p data-view-type="live">Each pixel is assigned a tonal value (black, white, shades of gray or colour), which is represented in binary code. The binary digits ("bits") for each pixel are stored in a sequence by a computer and often reducedto a mathematical representation (compressed). The bits are then interpreted and read by the computer to produce an analog version for display or printing.</p>
