--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
         <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
             <div class="ows-image-container">
               <div class="ows-image-container-wrapper" data-image-type="decorative_image">
-                <img data-view-type="live" data-id="1619" src="assets/mario.png" alt="Mario in pixels">
+                <img data-view-type="live" data-id="1620" src="assets/mariopixel.png" alt="Mario in pixels">
               </div>
             </div>
         </div>
@@ -700,7 +700,7 @@
         <div class="ows-image-container-wrapper" data-view-type="live" data-image-type="decorative_image">
             <div class="ows-image-container">
               <div class="ows-image-container-wrapper" data-image-type="decorative_image">
-                <img data-view-type="live" data-id="1619" src="assets/mario.png" alt="Mario in pixels">
+                <img data-view-type="live" data-id="1621" src="assets/mariopixel2.png" alt="Mario in pixels">
               </div>
             </div>
         </div>
