--- a/index.html
+++ b/index.html
@@ -736,8 +736,8 @@
   </div>
   <div class="slide" data-level="3">
     <section data-view-type="live">
-        <h2 data-view-type="live">Resolution</h2>
-    </section>
+        <iframe data-view-type="live" src="https://www.mentimeter.com/s/7c19b633f0c80af9fd7bdfbabb672945/8e032e3f17e6" alt="undefined"></iframe>
+      </section>
   </div>
   <div class="slide" data-level="4">
     <p data-view-type="live">Resolution is the ability to distinguish fine spatial detail.</p>
