--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
             </div>
         </div>
     </div>
-    <p data-view-type="live">the more pixels an image contains, the more it can be enlarged before the separate pixels start to show</p>
+    <p data-view-type="live">The more pixels an image contains, the more it can be enlarged before the separate pixels start to show</p>
     <p data-view-type="course">If a digital image is enlarged there will come a point when the individual elements can be seen as separate dots (fig. 2-3) - the more pixels an image contains, the more it can be enlarged before the separate pixels start to show.</p>
   </div>
   <div class="slide" data-level="4">
@@ -893,8 +893,12 @@
                 </div>
             </div>
             <p data-view-type="course">The size of the image can be described by its dimensions, for example, 1500 x 1700 pixels or by the total number of pixels present, in this case, 2.55 million.</p>
-            <iframe data-view-type="live" src="https://www.mentimeter.com/s/7c19b633f0c80af9fd7bdfbabb672945/e8030b507a24#" alt="undefined"></iframe>
         </section>
+    </section>
+  </div>
+  <div class="slide" data-level="0">
+    <section data-view-type="live">
+        <iframe data-view-type="live" src="https://www.mentimeter.com/s/7c19b633f0c80af9fd7bdfbabb672945/e8030b507a24#" alt="undefined"></iframe>      
     </section>
   </div>
   <div class="slide" data-level="0">
