--- a/index.html
+++ b/index.html
@@ -903,6 +903,12 @@
   </div>
   <div class="slide" data-level="0">
     <section data-view-type="live">
+      <h2 data-view-type="live">What are the pixel dimensions of a 5x7-inch photograph scanned at 400 dpi? </h2>
+      <p data-view-type="live">The pixel dimensions are 2,000 x 2,800. You can derive them by multiplying the dpi by the width (400 x 5 = 2,000) and then the dpi by the height (400 x 7 = 2,800).</p>
+    </section>
+  </div>
+  <div class="slide" data-level="0">
+    <section data-view-type="live">
         <h2 data-view-type="live">Bit depth</h2>
         <p data-view-type="live">Can anybody tell me what &ldquo;bit depth&rdquo; means?</p>
     </section>
