--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                                 </a></figcaption></div></figure>
   </div></div>
   <p data-view-type="live">Pixel values: As shown in this bitonal image, each pixel is assigned a tonal value, in this example 0 for black and 1 for white.</p>
-  <p data-view-type="course">Each pixel is assigned a tonal value (black, white, shades of gray or colour), which is represented in binary code (zeros and ones) (fig. 1). The binary digits ("bits") for each pixel are stored in a sequence by a computer and often reduced to a mathematical representation (compressed). The bits are then interpreted and read by the computer to produce an analog version for display or printing.</p></div>
+  <p data-view-type="course">Each pixel is assigned a tonal value (black, white, shades of gray or colour), which is represented in binary code (zeros and ones) (see figure on this slide). The binary digits ("bits") for each pixel are stored in a sequence by a computer and often reduced to a mathematical representation (compressed). The bits are then interpreted and read by the computer to produce an analog version for display or printing.</p></div>
     
         <div class="slide" data-level="3">
   <section data-view-type="live">
