--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                             
                                       </a></figcaption></div></figure>
     </div></div>
-    <p data-view-type="course">A grayscale image is composed of pixels represented by multiple bits of information, typically ranging from 2 to 8 bits or more (Fig. 6). Example: In a 2-bit image, there are four possible combinations: 00, 01, 10, and 11. If "00" represents black, and "11" represents white, then "01" equals dark gray and "10" equals light gray. The bit depth is two, but the number of tones that can be represented is 2 2 or 4. At 8 bits, 256 (2 8) different tones can be assigned to each pixel.</p>
+    <p data-view-type="course">A grayscale image is composed of pixels represented by multiple bits of information, typically ranging from 2 to 8 bits or more. Example: In a 2-bit image, there are four possible combinations: 00, 01, 10, and 11. If "00" represents black, and "11" represents white, then "01" equals dark gray and "10" equals light gray. The bit depth is two, but the number of tones that can be represented is 2 2 or 4. At 8 bits, 256 (2 8) different tones can be assigned to each pixel.</p>
   </section></div>
     
         <div class="slide" data-level="0">
@@ -844,7 +844,7 @@
       <li data-view-type="live">24-bit image: bits are often divided in 3 groupings (RGB) combination of those bits are used to represent the whole colour spectrum</li>
       <li data-view-type="live">24-bit image: 16.7 million (2**24) colour values</li>
     </ul>
-    <p data-view-type="course">A colour image is typically represented by a bit depth ranging from 8 to 24 or higher. With a 24-bit image, the bits are often divided into three groupings: 8 for red, 8 for green, and 8 for blue. Combinations of those bits are used to represent other colours. A 24-bit image offers 16.7 million (2 24) colour values (Fig. 6).</p>
+    <p data-view-type="course">A colour image is typically represented by a bit depth ranging from 8 to 24 or higher. With a 24-bit image, the bits are often divided into three groupings: 8 for red, 8 for green, and 8 for blue. Combinations of those bits are used to represent other colours. A 24-bit image offers 16.7 million (2 24) colour values (see figure: Bit Depth: Left to right - 1-bit bitonal, 8-bit grayscale, and 24-bit colour images. ).</p>
     <p data-view-type="course">Binary calculations for the number of tones represented by common bit depths:</p>
     <ul data-view-type="course">
       <li data-view-type="live">1 bit (21) = 2 tones</li>
