--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
       <li data-view-type="live">24-bit image: bits are often divided in 3 groupings (RGB) combination of those bits are used to represent the whole colour spectrum</li>
       <li data-view-type="live">24-bit image: 16.7 million (2**24) colour values</li>
     </ul>
-    <p data-view-type="course">A colour image is typically represented by a bit depth ranging from 8 to 24 or higher. With a 24-bit image, the bits are often divided into three groupings: 8 for red, 8 for green, and 8 for blue. Combinations of those bits are used to represent other colours. A 24-bit image offers 16.7 million (2 24) colour values (see figure: Bit Depth: Left to right - 1-bit bitonal, 8-bit grayscale, and 24-bit colour images. ).</p>
+    <p data-view-type="course">A colour image is typically represented by a bit depth ranging from 8 to 24 or higher. With a 24-bit image, the bits are often divided into three groupings: 8 for red, 8 for green, and 8 for blue. Combinations of those bits are used to represent other colours. A 24-bit image offers 16.7 million (2 24) colour values (see figure: Bit Depth: Left to right - 1-bit bitonal, 8-bit grayscale, and 24-bit colour images).</p>
     <p data-view-type="course">Binary calculations for the number of tones represented by common bit depths:</p>
     <ul data-view-type="course">
       <li data-view-type="live">1 bit (21) = 2 tones</li>
