--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
     </ul>
     <p data-view-type="course">Note: The human eye cannot distinguish all 256 different levels of brightness in an 8 bits image, nor can they be successfully recorded or printed using ink-jet or laser printers.</p>
     <p data-view-type="course">If only 256 brightness levels are stretched to cover this entire range, there is not enough sensitivity to small variations to reveal detail in either bright or dark areas. Capturing images with higher bit depth, for instance 12 bits (4096 brightness levels, which is approximately the capability of a film camera), can record the data, but it cannot be viewed successfully on a display screen or in a print.</p>
-    <p data-view-type="course">The threshold setting in bitonal scanning defines the point on a scale, ranging from 0 (black) to 255 (white), at which the gray values captured will be converted to black or white pixels. Note the effect of varying the threshold on typescript scanned at the same resolution on the same scanner (Fig. 7).</p>
+    <p data-view-type="course"></p>
   </section></div>
     
         <div class="slide" data-level="0">
