--- a/index.html
+++ b/index.html
@@ -886,6 +886,11 @@
     
         <div class="slide" data-level="0">
   <section data-view-type="live">
+    <h2 data-view-type="live">The threshold setting in bitonal scanning defines the point on a scale, ranging from 0 (black) to 255 (white), at which the gray values captured will be converted to black or white pixels. Note the effect of varying the threshold on typescript scanned at the same resolution on the same scanner.</h2>
+  </section></div>
+    
+        <div class="slide" data-level="0">
+  <section data-view-type="live">
     <h2 data-view-type="live">Dynamic range</h2>
     <p data-view-type="live">= the range of tonal difference between the lightest light and darkest dark of an image.</p>
     <p data-view-type="live">the higher the dynamic range</p>
